add GscKey
