# src/main/java/com/ecom/blogApi/controller/BlogController.java
@@ -5,12 +5,14 @@ import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
@@ -26,7 +28,8 @@ public class BlogController {
 	@Autowired
 	BlogService blogService;
 
-	@GetMapping("/getallblogs")
+	@CrossOrigin
+	@RequestMapping(value = "/blog", method = RequestMethod.GET)
 	ResponseEntity<Object> getAllBlogCategory() {
 		try {
 			List<Blog> blog = blogService.getAllBlogs();
@@ -38,24 +41,27 @@ public class BlogController {
 
 	}
 
-	@PostMapping(value = "/addblog")
+	@CrossOrigin
+	@PostMapping(value = "/blog")
 	ResponseEntity<Object> postBlogs(@RequestParam("categoryId") int categoryId,
 			@RequestParam("authorName") String authorName, @RequestParam("blogTitle") String blogTitle,
 			@RequestParam("description") String description, @RequestParam("seoTitle") String seoTitle,
 			@RequestParam("seoMetaDescription") String seoMetaDescription, @RequestParam("status") String status,
-			@RequestParam("imgData") MultipartFile imgData, @RequestParam("bannerData") MultipartFile bannerData) {
+			@RequestParam("blogImage") MultipartFile imgData, @RequestParam("blogBanner") MultipartFile bannerData,
+			@RequestParam("mobileBanner") MultipartFile mobileBanner) {
 
 		try {
 			Blog blog = blogService.createBlog(categoryId, authorName, blogTitle, description, seoTitle,
-					seoMetaDescription, status, imgData, bannerData);
-			return ResponseHandler.generateResponseForBlog("Sucessfully added data", HttpStatus.CREATED, blog);
+					seoMetaDescription, status, imgData, bannerData, mobileBanner);
+			return new ResponseEntity<>(blog, HttpStatus.CREATED);
 		} catch (Exception ex) {
 			return ResponseHandler.generateResponseBlogCategory(ex.getMessage(), HttpStatus.MULTI_STATUS, null);
 		}
 	}
 
-	@GetMapping(value = "/getsingleblog/{blogId}")
-	ResponseEntity<Object> getBlogById(@PathVariable int blogId) {
+	@CrossOrigin
+	@RequestMapping(value = "/blog/{blogId}", method = RequestMethod.GET)
+	ResponseEntity<Object> getBlogById(@PathVariable("blogId") int blogId) {
 
 		try {
 			Blog singleBlog = blogService.getSingleBlog(blogId);
@@ -67,19 +73,20 @@ public class BlogController {
 		}
 	}
 
-	@PutMapping(value = "/updateblog/{blogId}")
+	@PutMapping(value = "/blog/{blogId}")
 	ResponseEntity<Object> updateBlogAndImage(@PathVariable("blogId") int blogId,
 			@RequestParam("categoryId") int categoryId, @RequestParam("authorName") String authorName,
 			@RequestParam("blogTitle") String blogTitle, @RequestParam("description") String description,
 			@RequestParam("seoTitle") String seoTitle, @RequestParam("seoMetaDesc") String seoMetaDescription,
 			@RequestParam("status") String status, @RequestParam("blogImage") MultipartFile imageData,
-			@RequestParam("blogBanner") MultipartFile bannerData) {
+			@RequestParam("blogBanner") MultipartFile bannerData,
+			@RequestParam("mobileBanner") MultipartFile mobileBanner) {
 
 		try {
 			Blog blogResponse = blogService.updateBlog(blogId, categoryId, authorName, blogTitle, description, seoTitle,
-					seoMetaDescription, status, imageData, bannerData);
+					seoMetaDescription, status, imageData, bannerData, mobileBanner);
 
-			return ResponseHandler.generateResponseForBlog("Data is Updated...!", HttpStatus.OK, blogResponse);
+			return new ResponseEntity<>(blogResponse, HttpStatus.OK);
 		} catch (Exception ex) {
 
 			return ResponseHandler.generateResponseForBlog(ex.getMessage(), HttpStatus.MULTI_STATUS, null);
@@ -87,7 +94,7 @@ public class BlogController {
 
 	}
 
-	@DeleteMapping(value = "/deleteblog/{blogid}")
+	@DeleteMapping(value = "/blog/{blogid}")
 	ResponseEntity<Object> deleteBlog(@PathVariable("blogid") int id) {
 		try {
 			Blog blogResponse = blogService.deleteBlog(id);
